Visual change on background-clip changes.

The background-clip property affects background-color visually, so we
need to say a layer is visually different even without an image.

We had a wpt test for this which had a stray line which made the test
always pass.

Bug: 887350
Change-Id: Icc585f9e631485970b6509e015eff1e2007e4f0b
Reviewed-on: https://chromium-review.googlesource.com/1238448
Reviewed-by: Anders Ruud <andruud@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593523}
Former-commit-id: 550fc89a96af43ac1a8286b63e45a0484af64cbd